[project]
name = "unifai"
version = "0.1.0"
description = "Type-safe, zero-SDK adapter layer that normalizes any LLM provider into one consistent interface."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pavan Padala" }]
keywords = ["llm", "ai", "anthropic", "openai", "bedrock", "adapter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "boto3>=1.35",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
vertex = [
    "google-auth>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
